--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
    display: flex;
+   margin: 100px;
 }
 
 .half-width {
@@ -37,4 +38,10 @@ section {
 .top-banner {
    background-image: url(images/top-banner.png);
    background-repeat: no-repeat;
+}
+
+.dream-big {
+   background-image: url(images/dream-bg.png);
+   background-repeat: no-repeat;
+   background-position: right;
 }
